# Domo-MafiaCrawler

./: .gitignore  .replit  DEPENDENCIES.md  README.md  browser_test.py  check_frontmatter.py  chromium_test.py  crawler.py  domo_routes.py  domo_routes_v2.ipynb  env_sample  example_results.json  example_results.md  main.ipynb  main.py  one.py  playwright-environment-changes.patch  playwright-environment-setup.patch  program.py  pyproject.toml  replit.nix  requirements.txt  route.ipynb  route.py  setup_playwright.py  setup_playwright.py.old  slack_routes.py  test_route.py  ui.py  ui_v2.py  web_scraper.py
agents/: README.md  ai_expert.py  ui.py
agents/prompts/: ai_expert.txt
agents/tools/: dependencies.py
agents/tools/rag/: __init__.py  rag.py  utils.py
client/: MafiaError.py  ResponseGetData.py
docs/: openai_integration.md  supabase_integration.md
implementation/: Crawler.py  scraper.py  scraper_deprecated.py
playwright-environment-setup/: DEPENDENCIES.md
routes/: crawler.py  openai.py  supabase.py
templates/: about.html  crawler.html  error.html  index.html
templates/implementation/: scraper.py
utils/: chunk_execution.py  chunking.py  convert.py  files.py
