[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "crawl4ai>=0.5.0.post8",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.3",
    "routes>=2.5.1",
    "supabase>=2.15.0",
    "trafilatura>=2.0.0",
]
