[project]
name = "web-crawler-tool"
version = "0.1.0"
description = "A flexible Python web crawling tool for efficient website data extraction"
requires-python = ">=3.11"
dependencies = [
    # Web interface dependencies
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "flask-sqlalchemy>=3.1.1",
    # Core crawler dependencies
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "trafilatura>=2.0.0",
    "python-frontmatter>=1.1.0",
    "crawl4ai>=0.5.0",
    # Browser automation dependencies
    "playwright>=1.42.0",
    # Integration dependencies
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.15.0",
    "email-validator>=2.2.0",
    "routes>=2.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["client", "routes", "implementation", "utils"]
